<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="300dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:background="@color/FloralWhite"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:fontFamily="@font/fffforward"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="Welcome New Player!" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="#000"
            android:text="@string/welcomeregistrationmsg" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/firstname" />
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/lastname" />

        <EditText
            android:id="@+id/etBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/birthdate" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />
        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/green"
            android:fontFamily="@font/fffforward"
            android:textColor="#fff"
            android:text="Register" />
    </LinearLayout>
</LinearLayout>